z-index fixed

--- a/src/components/AvatarCard/components/AwardsSelect/AwardsSelect.scoped.css
+++ b/src/components/AvatarCard/components/AwardsSelect/AwardsSelect.scoped.css
@@ -6,7 +6,7 @@
   align-items: center;
   border: 1px solid #ccc;
   border-radius: 40px;
-  min-height: 65px;
+  min-height: 60px;
   position: relative;
   z-index: 0;
   animation-name: bounceIn;
