--- a/src/components/AvatarCard/components/CardTop/components/Avatar/Avatar.scoped.css
+++ b/src/components/AvatarCard/components/CardTop/components/Avatar/Avatar.scoped.css
@@ -53,10 +53,10 @@
 
 .verified {
   position: absolute;
-  top: 16px;
-  z-index: 2;
-  right: 63px;
-  width: 76px;
+  z-index: 1000 !important;
+  top: -31px;
+  right: -20px;
+  width: 145px;
   opacity: 0;
   transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);
   transform: scale(0.5) translateY(75px);
@@ -89,7 +89,7 @@
   border: 22px solid var(--borderColor);
   position: absolute;
   border-radius: 50%;
-  background: rgba(0,0,0,0);
+  background: rgba(0, 0, 0, 0);
   z-index: 4;
   opacity: 0;
   transform: scale(0.4);
@@ -152,7 +152,7 @@
   width: 100%;
   position: absolute;
   opacity: 0;
-  transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .filter-award.filter-award-most-hired {
